POR/RefEdge/src/objects/Referenceability__c.object
<CustomObject>
    <description>An object that contains the various Referenceabilities.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referenceability</relationshipLabel>
        <relationshipName>Referenceabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referenceability</relationshipLabel>
        <relationshipName>Referenceabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referenceability Type</label>
        <referenceTo>Referenceability_Type__c</referenceTo>
        <relationshipLabel>Referenceabilities</relationshipLabel>
        <relationshipName>Referenceabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type_f__c</fullName>
        <formula>Referenceability_Type__r.Name</formula>
        <label>Referenceability Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Declined: Unknown reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined: Company policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined: Not implemented yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined: Support issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>The date that an Approve or Decline was obtained</description>
        <inlineHelpText>Enter the date that the Approve or Decline was obtained</inlineHelpText>
        <label>Verified</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Referenceability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Referenceability_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Verified__c</columns>
        <columns>Comment__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REF-{000000}</displayFormat>
        <label>Referenceability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referenceability</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>